@@ -1,3 +1,7 @@
+2007-01-26  dima  <dima.exe@gmail.com>
+	
+  * rails-lib.el (list->alist): skip if LIST entry is list
+
 2007-01-25  dima  <dima.exe@gmail.com>
   * rails-navigation.el, rails-ui.el: add rails-nav:goto-plugins
   * rails-ruby.el: remove advice for ruby-indent-command
